Fix subsets method to deliver Token[] instead of Object[]. Refactor most loops to streams.